--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 cron.expression=0 0 0 * * 0
 
 #CourierAPI.json
-courier.api.path=C:/Users/hllyl/Downloads/delivery-app/delivery-app/src/main/resources/static/files/courierAPI.json
+courier.api.path=src/main/resources/static/files/courierAPI.json
 
 #Holidayapi
 holiday.api.uri=https://holidayapi.com/v1/holidays
